# strutil

./: CMakeLists.txt  Makefile  README.md  main.c  run_tests
example/: 01_basic_operations.c  02_thread_safe.c  03_io_operations.c  04_string_manipulation.c  CMakeLists.txt  example.c
include/: strutil.h
src/: strutil.c  strutil.h
test/: Makefile  strutil_test.c  test_strutil  test_strutil.c
tests/: CMakeLists.txt  test  test.c
